# stalkerware-indicators-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  rust.yml
examples/: lint.rs
src/: lib.rs  structs.rs
