[package]
name = "stalkerware-indicators"
version = "0.1.0"
edition = "2021"
description = "Parser for Te-k's stalkerware-indicators repo"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/stalkerware-indicators-rs"

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"

[dev-dependencies]
clap = { version = "3.1.13", features = ["derive"] }
env_logger = "0.9.0"
serde_json = "1.0.79"
