[package]
name = "stalkerware-indicators"
version = "0.2.0"
edition = "2021"
description = "Parser for Echap's stalkerware-indicators repo"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/stalkerware-indicators-rs"

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde_json = "1.0.79"
